Updates to the README.md for setup information and usage. Also created docker-compose-dev.yml

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,6 @@
 
 development-environment:
-  image: cfairweather/development-environment
+  build: development
   container_name: development-environment
   hostname: development-environment
   ports:
